[251001] 데이터 제발 마무리

--- a/qna_check.ipynb
+++ b/qna_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = \"data_yejin/FIN_workbook/1C\"\n",
+    "base_dir = \"data/FIN_workbook/1C\"\n",
     "# data_dir = os.path.join(base_dir,'Lv2', 're')\n",
-    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain_Lv2345_completed.json'), 'r', encoding='utf-8'))\n",
+    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain_Lv2345.json'), 'r', encoding='utf-8'))\n",
     "# origin = json.load(open('merged_qna_set.json', 'r', encoding='utf-8'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,40 +57,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'file_id': '9791138391115', 'title': '2025 시대에듀 투자자산운용사 실제유형 모의고사 + 특별부록 PASSCODE Premium ver 9.0', 'cat1_domain': '증권', 'cat2_sub': '수험서', 'cat3_specific': '투자자산운용사', 'chapter': '[특별부록 1] \\r빈출포인트 O/X 퀴즈', 'page': '0632', 'qna_type': 'essay', 'qna_domain': '재무기초', 'qna_data': {'tag': 'q_0632_0002', 'type': 'question', 'description': {'number': '02', 'question': '채권액면 1만 원, 표면금리 8%, 만기 3년, 연 단위 복리채의 만기상환금(S)을 구하는 공식은 ( )이다.', 'options': [], 'answer': '{f_0632_0001}', 'explanation': ''}, 'caption': [], 'file_path': None, 'bbox': None}, 'additional_tags_found': ['{f_0632_0001}'], 'additional_tag_data': [{'tag': '{f_0632_0001}', 'data': {'tag': 'f_0632_0001', 'type': 'formula', 'description': '\\\\(S=10,000\\\\times(1+0.08)^3\\\\)', 'caption': None, 'file_path': None, 'bbox': None}}]}\n",
+      "{'file_id': '9791138391115', 'title': '2025 시대에듀 투자자산운용사 실제유형 모의고사 + 특별부록 PASSCODE Premium ver 9.0', 'cat1_domain': '증권', 'cat2_sub': '수험서', 'cat3_specific': '투자자산운용사', 'chapter': '[특별부록 1] \\r빈출포인트 O/X 퀴즈', 'page': '0632', 'qna_type': 'short-answer', 'qna_domain': '재무기초', 'qna_data': {'tag': 'q_0632_0003', 'type': 'question', 'description': {'number': '03', 'question': '채권액면 10,000원, 표면금리 6%, 만기 2년, 연단위후급이표채의 경우, 만기 시 수령금액은 ( )이다.', 'options': [], 'answer': '10,600원', 'explanation': '▸발행 후 1년 시점에서 600원, 2년 시점에서 10,600원을 수령한다.'}, 'caption': [], 'file_path': None, 'bbox': None}, 'additional_tags_found': [], 'additional_tag_data': []}\n",
+      "{'file_id': '9791138391115', 'title': '2025 시대에듀 투자자산운용사 실제유형 모의고사 + 특별부록 PASSCODE Premium ver 9.0', 'cat1_domain': '증권', 'cat2_sub': '수험서', 'cat3_specific': '투자자산운용사', 'chapter': '[특별부록 1] \\r빈출포인트 O/X 퀴즈', 'page': '0632', 'qna_type': 'short-answer', 'qna_domain': '재무기초', 'qna_data': {'tag': 'q_0632_0004', 'type': 'question', 'description': {'number': '04', 'question': '이자지급기간 동안 이자가 재투자되어, 만기상환시에 원금과 이자를 동시에 지급하는 채권은 (복리채 / 할인채 / 이표채) 이다.', 'options': [], 'answer': '복리채', 'explanation': ''}, 'caption': [], 'file_path': None, 'bbox': None}, 'additional_tags_found': [], 'additional_tag_data': []}\n"
+     ]
+    }
+   ],
    "source": [
     "for question in origin:\n",
-    "    domain[question.get('qna_domain')] += 1\n",
+    "    try:\n",
+    "        domain[question.get('qna_domain')] += 1\n",
+    "    except:\n",
+    "        print(question)\n",
     "    # domain[question.get('qna_type')] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'경제': 1142,\n",
-       " '경영': 634,\n",
-       " '회계': 968,\n",
-       " '세무': 1056,\n",
-       " '노무': 5,\n",
-       " '통계': 17,\n",
-       " '내부통제': 777,\n",
-       " '영업': 25,\n",
-       " '디지털': 5,\n",
-       " '자산운용': 1709,\n",
-       " '리스크관리': 517,\n",
-       " '보험계약': 35,\n",
-       " '보상처리': 5,\n",
-       " '': 18026}"
+       "{'경제': 4727,\n",
+       " '경영': 3122,\n",
+       " '회계': 4693,\n",
+       " '세무': 4936,\n",
+       " '노무': 641,\n",
+       " '통계': 3333,\n",
+       " '내부통제': 6642,\n",
+       " '영업': 425,\n",
+       " '디지털': 12,\n",
+       " '자산운용': 8935,\n",
+       " '리스크관리': 2827,\n",
+       " '보험계약': 1291,\n",
+       " '보상처리': 1090,\n",
+       " '': 2137}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,17 +113,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{'경제': 163,\n",
+    " '경영': 139,\n",
+    " '회계': 480,\n",
+    " '세무': 10,\n",
+    " '노무': 0,\n",
+    " '통계': 1353,\n",
+    " '내부통제': 7,\n",
+    " '영업': 0,\n",
+    " '디지털': 2,\n",
+    " '자산운용': 119,\n",
+    " '리스크관리': 29,\n",
+    " '보험계약': 102,\n",
+    " '보상처리': 292,\n",
+    " '': 0}\n",
+    "\n",
+    " {'경제': 1409,\n",
+    " '경영': 1176,\n",
+    " '회계': 1809,\n",
+    " '세무': 1822,\n",
+    " '노무': 37,\n",
+    " '통계': 1652,\n",
+    " '내부통제': 2041,\n",
+    " '영업': 133,\n",
+    " '디지털': 6,\n",
+    " '자산운용': 3022,\n",
+    " '리스크관리': 1080,\n",
+    " '보험계약': 536,\n",
+    " '보상처리': 527,\n",
+    " '': 10047}\n",
+    "\n",
+    " {'경제': 1428,\n",
+    " '경영': 1336,\n",
+    " '회계': 2238,\n",
+    " '세무': 2123,\n",
+    " '노무': 37,\n",
+    " '통계': 1653,\n",
+    " '내부통제': 2153,\n",
+    " '영업': 147,\n",
+    " '디지털': 6,\n",
+    " '자산운용': 3095,\n",
+    " '리스크관리': 1086,\n",
+    " '보험계약': 536,\n",
+    " '보상처리': 527,\n",
+    " '': 8932}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24921"
+       "25297"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
