[251002] 데이터 마무리

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -80,31 +80,157 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tools.ProcessFiles as pf\n",
-    "import shutil\n",
+    "# import tools.ProcessFiles as pf\n",
+    "# import shutil\n",
     "\n",
     "# pf.change_names(excel_analy, '관리번호', '관리번호_new', '')\n",
-    "# file_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL/1C/Lv2/248779244/248779244.json'\n",
-    "# import pandas as pd\n",
-    "# import os\n",
+    "# file_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL/1C/Lv2/248779244/248779244.json'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "# base_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar\"\n",
-    "# analysis = {1:'1차 분석', 2:'2차 분석', 3: '3차 분석'}\n",
-    "# buy = {1:'1차 구매', 2:'2차 구매', 3: '3차 구매'}\n",
-    "# i = 3\n",
+    "base_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar\"\n",
+    "analysis = {1:'1차 분석', 2:'2차 분석', 3: '3차 분석'}\n",
+    "buy = {1:'1차 구매', 2:'2차 구매', 3: '3차 구매'}\n",
+    "i = 1\n",
     "\n",
-    "# excel_analy = pd.read_excel(os.path.join(base_path, '도서목록_전체통합.xlsx'), sheet_name=analysis[i], header=3)[['관리번호', 'ISBN', '도서명', '분류']]\n",
+    "excel_analy = pd.read_excel(os.path.join(base_path, '도서목록_전체통합.xlsx'), sheet_name=analysis[i], header=3)[['관리번호_old', '관리번호', 'ISBN', '도서명', '분류']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
     "\n",
-    "# for fn, tn, lv in zip(excel_analy['관리번호'], excel_analy['관리번호_new'], excel_analy['분류']):\n",
-    "#     fn = str(fn)\n",
-    "#     if '/' in lv: \n",
-    "#        lv = lv.replace(\"/\", '_')\n",
-    "# #     print(fn, tn, lv)\n",
+    "file_path = \"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FIN_workbook/1C/merged_extracted_qna_domain.json\"\n",
+    "with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "            content = f.read()\n",
+    "        \n",
+    "\n",
+    "\n",
+    "for fn, tn in zip(excel_analy['관리번호_old'], excel_analy['관리번호']):  \n",
+    "    # Read the file, replace content, and write back\n",
+    "    try:\n",
+    "        # Replace the old filename with new filename\n",
+    "        updated_content = content.replace(str(fn)+\"/\", str(tn)+\"/\")\n",
+    "        \n",
+    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "            f.write(updated_content)\n",
+    "            \n",
+    "        print(f\"Updated {fn} to {tn} in {file_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {fn} to {tn}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed version - using Python file operations instead of sed\n",
+    "import shutil\n",
+    "\n",
+    "for fn, tn in zip(excel_analy['관리번호_old'], excel_analy['관리번호']):\n",
+    "    # os.system(f\"cd /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/1C/Lv5 && find ./{tn}/pdf_page -name '{fn}*' | sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
+    "\n",
+    "    # Fix the sed command by using Python file operations instead\n",
+    "    file_path = \"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FIN_workbook/1C/merged_extracted_qna_domain.txt\"\n",
     "    \n",
-    "#     dir = os.path.join(pf.FINAL_DATA_PATH, pf.CYCLE_PATH[1], lv)\n",
-    "#     os.system(f'cd {dir} && mv {fn}_low {tn}_low && cd {tn} &&'+f' for file in *{fn}*; do mv \"$file\" \"$'+'{file//'+fn+'/'+tn+'}\"; done')\n",
-    "#     print(os.path.join(dir, fn))\n",
-    "#     # break\n"
+    "    # Read the file, replace content, and write back\n",
+    "    try:\n",
+    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "            content = f.read()\n",
+    "        \n",
+    "        # Replace the old filename with new filename\n",
+    "        updated_content = content.replace(str(fn), str(tn))\n",
+    "        \n",
+    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "            f.write(updated_content)\n",
+    "            \n",
+    "        print(f\"Updated {fn} to {tn} in {file_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {fn} to {tn}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn, tn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc = excel_analy[excel_analy['분류'] == 'Lv3/4']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excel_analy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SS0289\n",
+      "SS0290\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 업로드\n",
+    "for ss in file:\n",
+    "    print(ss)\n",
+    "    os.system(f\"scp -r /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/3C/Lv3_4/{ss} yjmoon@oci004:/home/yjmoon/FINAL/{ss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for fn, tn, lv in zip(excel_analy['관리번호'], excel_analy['관리번호_new'], excel_analy['분류']):\n",
+    "    fn = str(fn)\n",
+    "    if '/' in lv: \n",
+    "       lv = lv.replace(\"/\", '_')\n",
+    "#     print(fn, tn, lv)\n",
+    "    \n",
+    "    dir = os.path.join(pf.FINAL_DATA_PATH, pf.CYCLE_PATH[1], lv)\n",
+    "    os.system(f'cd {dir} && mv {fn}_low {tn}_low && cd {tn} &&'+f' for file in *{fn}*; do mv \"$file\" \"$'+'{file//'+fn+'/'+tn+'}\"; done')\n",
+    "    print(os.path.join(dir, fn))\n",
+    "    # break"
    ]
   },
   {
@@ -192,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +327,7 @@
     "\n",
     "# for j in json_files:\n",
     "if True:\n",
-    "    j = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL/2C_0902/Lv2/SS0104/SS0104.json'\n",
+    "    j = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL/2C/Lv2/SS0164/SS0164.json'\n",
     "    INPUT_PATH = j\n",
     "    BACKUP_PATH = INPUT_PATH + \".bak\"\n",
     "\n",
