--- a/qna_check.ipynb
+++ b/qna_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excel = pf.get_excel_data(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>도서명</th>\n",
+       "      <th>출판일</th>\n",
+       "      <th>코퍼스 1분류</th>\n",
+       "      <th>코퍼스 2분류</th>\n",
+       "      <th>비고</th>\n",
+       "      <th>분류</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>관리번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>SS0319</th>\n",
+       "      <td>9791163478782</td>\n",
+       "      <td>금융의 현재와 미래</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0320</th>\n",
+       "      <td>9788984059900</td>\n",
+       "      <td>요즘 금리 쉬운 경제</td>\n",
+       "      <td>2020-04-27</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0321</th>\n",
+       "      <td>9788960542570</td>\n",
+       "      <td>알기 쉬운 보험 세테크 100% 활용법</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>세무</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0322</th>\n",
+       "      <td>9788957614358</td>\n",
+       "      <td>공정거래 용어사전</td>\n",
+       "      <td>2020-08-10</td>\n",
+       "      <td>금융</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>용어</td>\n",
+       "      <td>Lv2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0323</th>\n",
+       "      <td>9791190820660</td>\n",
+       "      <td>1페이지 보험 정리의 기술</td>\n",
+       "      <td>2020-08-28</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>기초</td>\n",
+       "      <td>시사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ISBN                    도서명        출판일 코퍼스 1분류 코퍼스 2분류  비고  \\\n",
+       "관리번호                                                                          \n",
+       "SS0319  9791163478782             금융의 현재와 미래 2020-01-03      금융      기초  시사   \n",
+       "SS0320  9788984059900            요즘 금리 쉬운 경제 2020-04-27      금융      기초  시사   \n",
+       "SS0321  9788960542570  알기 쉬운 보험 세테크 100% 활용법 2020-06-23      보험      기초  세무   \n",
+       "SS0322  9788957614358              공정거래 용어사전 2020-08-10      금융      기초  용어   \n",
+       "SS0323  9791190820660         1페이지 보험 정리의 기술 2020-08-28      보험      기초  시사   \n",
+       "\n",
+       "           분류  \n",
+       "관리번호           \n",
+       "SS0319  Lv3/4  \n",
+       "SS0320  Lv3/4  \n",
+       "SS0321  Lv3/4  \n",
+       "SS0322    Lv2  \n",
+       "SS0323  Lv3/4  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "excel.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_dir = \"data/FIN_workbook/1C\"\n",
     "# data_dir = os.path.join(base_dir,'Lv2', 're')\n",
-    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain_Lv2345.json'), 'r', encoding='utf-8'))\n",
+    "origin = json.load(open(os.path.join(base_dir, 'merged_extracted_qna_domain.json'), 'r', encoding='utf-8'))\n",
     "# origin = json.load(open('merged_qna_set.json', 'r', encoding='utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for q in origin:\n",
+    "    q['file_id'] = excel[excel['ISBN'] == int(q.get('file_id'))].index[0]\n",
+    "    # print(q)\n",
+    "    # br"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_PATH = \"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FIN_workbook/1C/merged_extracted_qna_domain.json\"\n",
+    "with open(INPUT_PATH, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(origin, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -212,18 +371,11 @@
     "    # if q.get('qna_domain') != '회계':\n",
     "        # print(q.get('qna_data'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "test",
    "language": "python",
    "name": "python3"
   },
@@ -237,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
