--- a/qna_extract.ipynb
+++ b/qna_extract.ipynb
@@ -542,12 +542,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 수정된 코드 테스트 - 단일 파일로 테스트\n",
+    "test_json_file = json_files[0]  # 첫 번째 파일로 테스트\n",
+    "test_name = os.path.basename(test_json_file)\n",
+    "print(f\"테스트 파일: {test_name}\")\n",
+    "\n",
+    "# 수정된 함수로 처리\n",
+    "result = pq.get_qna_datas(test_json_file, os.path.join(data_dir, 'test_extracted', test_name), 'x-ai/grok-4-fast')\n",
+    "\n",
+    "print(f\"\\n처리 결과:\")\n",
+    "print(f\"- 추출된 Q&A 개수: {len(result['extracted_qna'])}\")\n",
+    "\n",
+    "# 각 Q&A의 domain 정보 확인\n",
+    "for i, qna in enumerate(result['extracted_qna'][:3]):  # 처음 3개만 확인\n",
+    "    print(f\"\\nQ&A {i+1}:\")\n",
+    "    print(f\"  - 질문: {qna['qna_data']['description']['question'][:50]}...\")\n",
+    "    print(f\"  - Domain: {qna['qna_domain']}\")\n",
+    "    print(f\"  - Page: {qna['page']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -561,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
