[251008] add_domain_onebyone

--- a/qna_extract.ipynb
+++ b/qna_extract.ipynb
@@ -18,24 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/2C',\n",
-       " '/Users/yejin/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FIN_workbook/2C')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "origin_data_dir = os.path.join(pf.FINAL_DATA_PATH, '2C').replace('jinym', 'yejin')\n",
-    "data_dir = pf.FINAL_DATA_PATH.replace('FINAL', 'FIN_workbook/2C').replace('jinym', 'yejin')\n",
+    "origin_data_dir = os.path.join(pf.FINAL_DATA_PATH, '2C')#.replace('jinym', 'yejin')\n",
+    "data_dir = pf.FINAL_DATA_PATH.replace('FINAL', 'FIN_workbook/2C')#.replace('jinym', 'yejin')\n",
     "origin_data_dir, data_dir"
    ]
   },
@@ -50,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel = pf.get_excel_data(2, pf.BASE_PATH.replace('jinym', 'yejin'))\n",
+    "excel = pf.get_excel_data(2, pf.BASE_PATH)#.replace('jinym', 'yejin'))\n",
     "\n",
     "Lv2_isbn_id = excel[excel['분류'] == 'Lv2']\n",
     "Lv3_isbn_id = excel[excel['분류'] == 'Lv3/4']\n",
@@ -72,20 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50, 139, 56)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(Lv2_isbn_id),len(Lv3_isbn_id), len(Lv5_isbn_id)"
    ]
@@ -101,50 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_files = pf.get_filelist(2, origin_data_dir)\n",
-    "# json_files = [file for file in json_files if 'Lv2' not in file]"
+    "json_files = [file for file in json_files if 'Lv5' in file]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(json_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'SS0164'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "json = [os.path.splitext(os.path.basename(file))[0] for file in json_files]\n",
     "set(Lv2_isbn_id.index) - set(json)"
@@ -182,6 +137,7 @@
     "            # 파일 처리\n",
     "            name = os.path.basename(json_file)\n",
     "            result = pq.get_qna_datas(json_file, os.path.join(data_dir, 'extracted', name), 'x-ai/grok-4-fast')\n",
+    "            # result = pq.get_qna_datas(json_file)\n",
     "            # pq.add_qna_domain(json_file, os.path.join(data_dir, 'with_domain', name), 'x-ai/grok-4-fast')\n",
     "            \n",
     "            total_extracted += len(result['extracted_qna'])\n",
@@ -271,13 +227,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 수정된 코드 테스트 - 단일 파일로 테스트\n",
     "test_json_file = json_files[0]  # 첫 번째 파일로 테스트\n",
     "test_name = os.path.basename(test_json_file)\n",
     "print(f\"테스트 파일: {test_name}\")\n",
     "\n",
     "# 수정된 함수로 처리\n",
-    "result = pq.get_qna_datas(test_json_file, os.path.join(data_dir, 'test_extracted', test_name), 'x-ai/grok-4-fast')\n",
+    "result = pq.get_qna_datas(test_json_file, os.path.join(data_dir, 'extracted', test_name), 'x-ai/grok-4-fast')\n",
     "\n",
     "print(f\"\\n처리 결과:\")\n",
     "print(f\"- 추출된 Q&A 개수: {len(result['extracted_qna'])}\")\n",
@@ -287,8 +252,25 @@
     "    print(f\"\\nQ&A {i+1}:\")\n",
     "    print(f\"  - 질문: {qna['qna_data']['description']['question'][:50]}...\")\n",
     "    print(f\"  - Domain: {qna['qna_domain']}\")\n",
-    "    print(f\"  - Page: {qna['page']}\")\n"
+    "    print(f\"  - Page: {qna['page']}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/FIN_workbook/SS0087_data_result.json', 'w') as f:\n",
+    "    json.dump(result, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -300,7 +282,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
