--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -17,7 +17,7 @@
     "                    \"explanation\": \"\" \n",
     "                    }, \n",
     "                \"caption\": [ \n",
-    "                    \" 기출\", \"키워드: \" \n",
+    "                    \"\" \n",
     "                    ], \n",
     "                \"file_path\": null, \n",
     "                \"bbox\": null \n",
@@ -710,7 +710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "test",
    "language": "python",
    "name": "python3"
   },
@@ -724,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
