--- a/qna_check.ipynb
+++ b/qna_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel = pf.get_excel_data(1)"
+    "excel = pf.get_excel_data(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,53 +69,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>SS0319</th>\n",
-       "      <td>9791163478782</td>\n",
-       "      <td>금융의 현재와 미래</td>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>금융</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>시사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0320</th>\n",
-       "      <td>9788984059900</td>\n",
-       "      <td>요즘 금리 쉬운 경제</td>\n",
-       "      <td>2020-04-27</td>\n",
-       "      <td>금융</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>시사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0321</th>\n",
-       "      <td>9788960542570</td>\n",
-       "      <td>알기 쉬운 보험 세테크 100% 활용법</td>\n",
-       "      <td>2020-06-23</td>\n",
+       "      <th>SS03011</th>\n",
+       "      <td>9791138347662</td>\n",
+       "      <td>SD에듀 보험계리사 1차 한권으로 끝내기 1권 (보험계약법, 보험업법 및 근로자퇴직...</td>\n",
+       "      <td>2024-02-05</td>\n",
        "      <td>보험</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>세무</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>보험계리사</td>\n",
        "      <td>Lv3/4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SS0322</th>\n",
-       "      <td>9788957614358</td>\n",
-       "      <td>공정거래 용어사전</td>\n",
-       "      <td>2020-08-10</td>\n",
-       "      <td>금융</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>용어</td>\n",
-       "      <td>Lv2</td>\n",
+       "      <th>SS03012</th>\n",
+       "      <td>9791138347662</td>\n",
+       "      <td>SD에듀 보험계리사 1차 한권으로 끝내기 2권 (경제학원론)</td>\n",
+       "      <td>2024-02-05</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>보험계리사</td>\n",
+       "      <td>Lv3/4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SS0323</th>\n",
-       "      <td>9791190820660</td>\n",
-       "      <td>1페이지 보험 정리의 기술</td>\n",
-       "      <td>2020-08-28</td>\n",
+       "      <th>SS03013</th>\n",
+       "      <td>9791138347662</td>\n",
+       "      <td>SD에듀 보험계리사 1차 한권으로 끝내기 3권 (보험수학)</td>\n",
+       "      <td>2024-02-05</td>\n",
        "      <td>보험</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>시사</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>보험계리사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS03014</th>\n",
+       "      <td>9791138347662</td>\n",
+       "      <td>SD에듀 보험계리사 1차 한권으로 끝내기 4권 (회계원리)</td>\n",
+       "      <td>2024-02-05</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>보험계리사</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS0303</th>\n",
+       "      <td>9788966138500</td>\n",
+       "      <td>와우패스 변액보험판매관리사 핵심요약 및 문제집</td>\n",
+       "      <td>2025-01-20</td>\n",
+       "      <td>보험</td>\n",
+       "      <td>수험서</td>\n",
+       "      <td>변액보험판매관리사</td>\n",
        "      <td>Lv3/4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -123,30 +123,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                 ISBN                    도서명        출판일 코퍼스 1분류 코퍼스 2분류  비고  \\\n",
-       "관리번호                                                                          \n",
-       "SS0319  9791163478782             금융의 현재와 미래 2020-01-03      금융      기초  시사   \n",
-       "SS0320  9788984059900            요즘 금리 쉬운 경제 2020-04-27      금융      기초  시사   \n",
-       "SS0321  9788960542570  알기 쉬운 보험 세테크 100% 활용법 2020-06-23      보험      기초  세무   \n",
-       "SS0322  9788957614358              공정거래 용어사전 2020-08-10      금융      기초  용어   \n",
-       "SS0323  9791190820660         1페이지 보험 정리의 기술 2020-08-28      보험      기초  시사   \n",
+       "                  ISBN                                                도서명  \\\n",
+       "관리번호                                                                        \n",
+       "SS03011  9791138347662  SD에듀 보험계리사 1차 한권으로 끝내기 1권 (보험계약법, 보험업법 및 근로자퇴직...   \n",
+       "SS03012  9791138347662                  SD에듀 보험계리사 1차 한권으로 끝내기 2권 (경제학원론)   \n",
+       "SS03013  9791138347662                   SD에듀 보험계리사 1차 한권으로 끝내기 3권 (보험수학)   \n",
+       "SS03014  9791138347662                   SD에듀 보험계리사 1차 한권으로 끝내기 4권 (회계원리)   \n",
+       "SS0303   9788966138500                          와우패스 변액보험판매관리사 핵심요약 및 문제집   \n",
        "\n",
-       "           분류  \n",
-       "관리번호           \n",
-       "SS0319  Lv3/4  \n",
-       "SS0320  Lv3/4  \n",
-       "SS0321  Lv3/4  \n",
-       "SS0322    Lv2  \n",
-       "SS0323  Lv3/4  "
+       "               출판일 코퍼스 1분류 코퍼스 2분류         비고     분류  \n",
+       "관리번호                                                  \n",
+       "SS03011 2024-02-05      보험     수험서      보험계리사  Lv3/4  \n",
+       "SS03012 2024-02-05      보험     수험서      보험계리사  Lv3/4  \n",
+       "SS03013 2024-02-05      보험     수험서      보험계리사  Lv3/4  \n",
+       "SS03014 2024-02-05      보험     수험서      보험계리사  Lv3/4  \n",
+       "SS0303  2025-01-20      보험     수험서  변액보험판매관리사  Lv3/4  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "excel.head()"
+    "excel[(excel['코퍼스 2분류'] == '수험서') & (excel['분류'] == 'Lv3/4')]"
    ]
   },
   {
@@ -375,7 +375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
