[251024] 파일&코드 정리

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -76,19 +76,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import tools.ProcessFiles as pf\n",
-    "# import shutil\n",
-    "\n",
-    "# pf.change_names(excel_analy, '관리번호', '관리번호_new', '')\n",
-    "# file_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL/1C/Lv2/248779244/248779244.json'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -110,45 +97,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixed version - using Python file operations instead of sed\n",
-    "import shutil\n",
+    "# import tools.ProcessFiles as pf\n",
+    "# import shutil\n",
     "\n",
-    "for fn, tn in zip(excel_analy['관리번호_old'], excel_analy['관리번호']):\n",
-    "    # os.system(f\"cd /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/1C/Lv5 && find ./{tn}/pdf_page -name '{fn}*' | sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
+    "# pf.change_names(excel_analy, '관리번호', '관리번호_new', '')\n",
+    "# file_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FINAL/1C/Lv2/248779244/248779244.json'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>관리번호_old</th>\n",
+       "      <th>관리번호</th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>도서명</th>\n",
+       "      <th>분류</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>250217022</td>\n",
+       "      <td>SS0319</td>\n",
+       "      <td>9791190820660</td>\n",
+       "      <td>1페이지 보험 정리의 기술</td>\n",
+       "      <td>Lv3/4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    관리번호_old    관리번호           ISBN             도서명     분류\n",
+       "0  250217022  SS0319  9791190820660  1페이지 보험 정리의 기술  Lv3/4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "excel_analy[excel_analy['관리번호'] == 'SS0319']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 25)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_list = [str(f)+\".zip\" for f in excel_analy[excel_analy['분류'] == 'Lv5']['관리번호_old'].tolist()]\n",
+    "file_list = [f for f in os.listdir(os.path.join(base_path, 'data', 'ORIGINAL', '1C', 'Lv5')) if f.endswith('.zip')]\n",
     "\n",
-    "    # Fix the sed command by using Python file operations instead\n",
-    "    file_path = \"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FIN_workbook/1C/merged_extracted_qna_domain.txt\"\n",
-    "    \n",
-    "    # Read the file, replace content, and write back\n",
-    "    try:\n",
-    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
-    "            content = f.read()\n",
-    "        \n",
-    "        # Replace the old filename with new filename\n",
-    "        updated_content = content.replace(str(fn), str(tn))\n",
-    "        \n",
-    "        with open(file_path, 'w', encoding='utf-8') as f:\n",
-    "            f.write(updated_content)\n",
-    "            \n",
-    "        print(f\"Updated {fn} to {tn} in {file_path}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing {fn} to {tn}: {e}\")\n"
+    "len(zip_list), len(file_list)\n",
+    "# set(zip_list) - set(file_list)\n",
+    "# set(file_list) - set(zip_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SS0289\n",
-      "SS0290\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Fixed version - using Python file operations instead of sed\n",
+    "import shutil\n",
+    "\n",
+    "for fn, tn, isbn, lv in zip(excel_analy['관리번호_old'], excel_analy['관리번호'], excel_analy['ISBN'], excel_analy['분류']):\n",
+    "   fn = str(fn)\n",
+    "   if '/' in lv: \n",
+    "      lv = lv.replace(\"/\", '_')\n",
+    "   \n",
+    "   if 'Lv' not in lv:\n",
+    "      continue\n",
+    "\n",
+    "   \n",
+    "   os.system(f\"cd /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/{lv} && mkdir {tn} && unzip {fn}.zip -d {tn} && find . -type f -name '*{fn}*'| sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
+    "   # os.system(f\"cd /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/ORIGINAL/1C/Lv2 && mv {isbn}.json {tn}.json\")\n",
+    "   \n",
+    "   # else:\n",
+    "      \n",
+    "      \n",
+    "   # os.system(f\"cd /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/1C/{lv} && find ./{tn}/pdf_page -name '{fn}*' | sed -e 'p' -e 's/{fn}/{tn}/g' | xargs -n 2 mv\")\n",
+    "\n",
+    "    # # Fix the sed command by using Python file operations instead\n",
+    "    # file_path = \"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/data/FIN_workbook/1C/merged_extracted_qna_domain.txt\"\n",
+    "    \n",
+    "    # # Read the file, replace content, and write back\n",
+    "    # try:\n",
+    "    #     with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "    #         content = f.read()\n",
+    "        \n",
+    "    #     # Replace the old filename with new filename\n",
+    "    #     updated_content = content.replace(str(fn), str(tn))\n",
+    "        \n",
+    "    #     with open(file_path, 'w', encoding='utf-8') as f:\n",
+    "    #         f.write(updated_content)\n",
+    "            \n",
+    "    #     print(f\"Updated {fn} to {tn} in {file_path}\")\n",
+    "    # except Exception as e:\n",
+    "    #     print(f\"Error processing {fn} to {tn}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -178,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -328,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
